--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"phuongga844.aternos.me",
+	"ip":"phuongga844lj7s.aternos.me",
 	"port": "25565",
 	"name": "NRBot",
 	"auto-night-skip":"false"
